adjusted hac and had

--- a/styless/respo.css
+++ b/styless/respo.css
@@ -27,16 +27,16 @@
     .ha {
         display: block;
      }
+     .had::before {
+        left: 100%;
+     }
 
      .had::after {
         border-color: transparent white white transparent;
         top: -1.8rem;
-        right: 100%;
-     }
-
-     .had::before {
         right: 80%;
      }
+     
      .i {
         display: block;
      }
